manifests/mongodb-instance-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-instance-svc
  namespace: mongodb
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  selector:
    app.kubernetes.io/instance: mongodb-instance
    app.kubernetes.io/name: mongodb
